# gh_mirror_gui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GOAL-ANCHOR.json  GOAL_AUDIT.md  ROADMAP.md
docs/delivery/: 2026-05-02-release-verification.md
src/: artifact_decision.rs  backend_contract.rs  bench.rs  cli.rs  core_runtime.rs  download.rs  evidence_ledger.rs  github_intent.rs  gui_app.rs  gui_common.rs  gui_helpers.rs  gui_mirrors.rs  gui_trust_center.rs  gui_update_candidate.rs  history.rs  lib.rs  main.rs  releases.rs  source_adapter.rs  source_spec.rs  source_trust.rs  staged_release.rs  trust_center.rs  trust_policy.rs  ui_projection.rs  update_apply_bundle.rs  update_apply_helper.rs  update_apply_plan.rs  update_apply_readiness.rs  update_candidate.rs  url_policy.rs  verification.rs  verifier_adapter.rs
tools/: release-signing-bootstrap.ps1  release-verify.ps1  target-gc.ps1
