[package]
name = "gh_mirror_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30"
egui = "0.30"
reqwest = { version = "0.12", features = ["blocking", "socks"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
arboard = "3"
notify-rust = "4"
directories = "5"