[package]
name = "gh_mirror_gui"
version = "0.1.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "gh_mirror_gui"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
egui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "socks", "native-tls"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"
rfd = "0.14"
arboard = "3"
notify-rust = "4"
directories = "5"
